--- a/VsiteZavrsniRad/Pages/Dialogs/SelectClientDialog.razor
+++ b/VsiteZavrsniRad/Pages/Dialogs/SelectClientDialog.razor
@@ -29,9 +29,9 @@
                 foreach (var client in ClientData)
                 {
                     orderNumber++;
-                    <tr>
+                    <tr class="align-middle">
                         <td>@orderNumber</td>
-                        <td>@client.CompanyName</td>
+                        <td>@client.ClientName</td>
                         <td>@client.TaxNumber</td>
                         <td>@client.City</td>
                         <td>@client.Address</td>
