--- a/VsiteZavrsniRad/Pages/SpareParts/SparePartCreateEdit.razor
+++ b/VsiteZavrsniRad/Pages/SpareParts/SparePartCreateEdit.razor
@@ -83,6 +83,7 @@
         }
         else
         {
+            CalculatePriceWithVAT();
             Repository.SaveSparePart(SparePart);
         }
         NavigationManager.NavigateTo("spareParts");
