Add RadzenDialog Dispose in SaveWorkOrder method

--- a/VsiteZavrsniRad/Pages/WorkOrders/WorkOrderCreateEdit.razor
+++ b/VsiteZavrsniRad/Pages/WorkOrders/WorkOrderCreateEdit.razor
@@ -216,11 +216,13 @@
         {
             WorkOrder.WorkOrderNumber = workOrderNumber;
             WorkOrder.Date = workOrderDate;
+            Dispose();
 
             WorkOrderRepository.CreateWorkOrder(WorkOrder);
         }
         else
         {
+            Dispose();
             WorkOrderRepository.SaveWorkOrder(WorkOrder);
         }
         NavigationManager.NavigateTo("workOrders");
