--- a/VsiteZavrsniRad/_Imports.razor
+++ b/VsiteZavrsniRad/_Imports.razor
@@ -13,6 +13,7 @@
 @using VsiteZavrsniRad.Database.Repository.Client
 @using VsiteZavrsniRad.Database.Repository.SparePart
 @using VsiteZavrsniRad.Database.Repository.WorkOrder
+@using VsiteZavrsniRad.Database.Repository.SparePart_WorkOrder
 @using VsiteZavrsniRad.Pages.Clients
 @using VsiteZavrsniRad.Pages.SpareParts
 @using VsiteZavrsniRad.Pages.WorkOrders
