--- a/VsiteZavrsniRad/Pages/WorkOrders/WorkOrderCreateEdit.razor
+++ b/VsiteZavrsniRad/Pages/WorkOrders/WorkOrderCreateEdit.razor
@@ -56,7 +56,7 @@
             <RadzenTextArea @bind-Value="WorkOrder.WorkDescription"></RadzenTextArea>
         </div>
 
-        <div class="form-group row mb-4 mt-5">
+        <div class="form-group row mb-5 mt-5 position-relative">
             <div class="table-responsive">
                 <table class="table table-striped table-bordered table-sm">
                     <thead>
@@ -83,9 +83,9 @@
                                     <td><RadzenTextBox Value="@part.Code" Style="width:100%" ReadOnly></RadzenTextBox></td>
                                     <td><RadzenTextBox Value="@part.Description" Style="width:100%" ReadOnly></RadzenTextBox></td>
                                     <td><RadzenTextBox Value="@part.UnitOfMeasure" Style="width:100%" ReadOnly></RadzenTextBox></td>
-                                    <td><RadzenTextBox Style="width:100%" Value="@part.Quantity.ToString()"></RadzenTextBox></td>
+                                    <td><RadzenTextBox Value="@quantity.ToString()" @oninput=@(args => OnQntyEntered(args.Value.ToString(), part.PriceWithoutVAT.ToString(), part.Id.ToString())) Style="width:100%" ></RadzenTextBox></td>
                                     <td><RadzenTextBox Value="@part.PriceWithoutVAT.ToString()" Style="width:100%"></RadzenTextBox></td>
-                                    <td><RadzenTextBox Value="@part.PriceWithoutVAT.ToString()" Style="width:100%"></RadzenTextBox></td>
+                                    <td><RadzenTextBox Value="@part.quantityTimesPriceWithoutVAT.ToString()" Style="width:100%" ReadOnly></RadzenTextBox></td>
                                     <td class="text-center"><RadzenButton Text="..." ButtonStyle="ButtonStyle.Secondary" Click=@SelecSparePart /></td>
                                 </tr>
                             }
@@ -96,7 +96,7 @@
                         }
                         <tr class="align-middle">
                             <td><RadzenTextBox Style="width:100%" Value="@OrderNumberToString(orderNumber)" ReadOnly></RadzenTextBox></td>
-                            <td><RadzenTextBox Style="width:100%"></RadzenTextBox></td>
+                            <td><RadzenTextBox Style="width:100%" ReadOnly></RadzenTextBox></td>
                             <td><RadzenTextBox Disabled Style="width:100%"></RadzenTextBox></td>
                             <td><RadzenTextBox Disabled Style="width:100%"></RadzenTextBox></td>
                             <td><RadzenTextBox Style="width:100%"></RadzenTextBox></td>
@@ -104,25 +104,20 @@
                             <td><RadzenTextBox Style="width:100%"></RadzenTextBox></td>
                             <td class="text-center"><RadzenButton Text="..." ButtonStyle="ButtonStyle.Secondary" Click=@SelecSparePart /></td>
                         </tr>
+                    </tbody>
+                </table>
+
+                <table class="table table-bordered table-sm w-25 position-absolute end-0 me-3 mb-5">
+                    <thead>
+                    </thead>
+                    <tbody>
                         <tr class="align-middle">
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
                             <td><RadzenTextBox ReadOnly Value="Cijena (vpc):" Style="width:100%"></RadzenTextBox></td>
-                            <td><b><RadzenTextBox ReadOnly Value="@stringOveralPriceWithoutVAT" Style="width:100%"></RadzenTextBox></b></td>
-                            <td></td>
-                            <td></td>
+                            <td><RadzenTextBox ReadOnly Value="@stringOveralPriceWithoutVAT" Style="width:100%"></RadzenTextBox></td>
                         </tr>
                         <tr class="align-middle">
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td><RadzenTextBox ReadOnly Value="Ukupna cijena:" Style="width:100%"></RadzenTextBox></td>
-                            <td><RadzenTextBox ReadOnly Value="@stringOveralPriceWithVAT" Style="width:100%"></RadzenTextBox></td>
-                            <td></td>
-                            <td></td>
+                            <td class="table-dark"><RadzenTextBox ReadOnly Value="Ukupna cijena:" Style="width:100%"></RadzenTextBox></td>
+                            <td class="table-dark"><RadzenTextBox ReadOnly Value="@stringOveralPriceWithVAT" Style="width:100%"></RadzenTextBox></td>
                         </tr>
                     </tbody>
                 </table>
@@ -142,11 +137,12 @@
 @code {
 
     private int orderNumber;
-    string pageTitle = "";
+    private string pageTitle = "";
     private string workOrderNumber = "";
     private DateTime workOrderDate;
-    string stringOveralPriceWithoutVAT = "";
-    string stringOveralPriceWithVAT = "";
+    private string stringOveralPriceWithoutVAT = "";
+    private string stringOveralPriceWithVAT = "";
+    private int quantity = 1;
 
     public IWorkOrderRepository? WorkOrderRepository;
     public IClientRepository? ClientRepository;
@@ -207,6 +203,14 @@
         {
             SparePartsData.Add(SparePartRepository.SpareParts.FirstOrDefault(sp => sp.Id == item.SparePartId));
         }
+
+        foreach (var item in SparePartsData)
+        {
+            if (item.quantityTimesPriceWithoutVAT == 0)
+            {
+                item.quantityTimesPriceWithoutVAT = item.PriceWithoutVAT;
+            }
+        }
     }
 
 
@@ -258,6 +262,10 @@
         SparePart_WorkOrder.SparePartId = SparePart.Id;
         WorkOrder.SparePart_WorkOrders.Add(SparePart_WorkOrder);
         SparePartsData.Add(SparePart);
+        if (SparePart.quantityTimesPriceWithoutVAT == 0)
+        {
+            SparePart.quantityTimesPriceWithoutVAT = 1 * SparePart.PriceWithoutVAT;
+        }
         CalculateOveralPrice();
         StateHasChanged();
     }
@@ -309,12 +317,59 @@
     }
 
 
-    private void CalculateOveralPrice()
+    private string CalculateQntTimesPrice(int quantity, decimal priceWithoutVAT)
     {
-        decimal overalPriceWithoutVAT = 0M;
+        return (quantity * priceWithoutVAT).ToString();
+    }
+
+
+    private void OnQntyEntered(string quantity, string priceWithoutVAT, string id)
+    {
+        int parseQnty;
+        int qnty;
+        decimal price;
+        decimal parsePrice;
+        int parseId;
+        int outId;
+
+        bool isQntyParsable = Int32.TryParse(quantity, out qnty);
+        bool isPriceParsable = Decimal.TryParse(priceWithoutVAT, out price);
+        bool isIntParsable = Int32.TryParse(id, out outId);
+
+        if (isQntyParsable && isPriceParsable && isIntParsable)
+        {
+            parseQnty = qnty;
+            parsePrice = price;
+            parseId = outId;
+            parsePrice = (parseQnty * price);
+
+            UpdateSparePartFinalPrice(parseId, parsePrice);
+        }
+    }
+
+
+    private void UpdateSparePartFinalPrice(int id, decimal finalPrice)
+    {
+        SparePartModel sparePart = SparePartsData.FirstOrDefault(sp => sp.Id == id) ?? new();
+
         foreach (var item in SparePartsData)
         {
-            overalPriceWithoutVAT += item.PriceWithoutVAT;
+            if (sparePart.Id == item.Id)
+            {
+                item.quantityTimesPriceWithoutVAT = finalPrice;
+            }
+        }
+        CalculateOveralPrice();
+    }
+
+
+    private void CalculateOveralPrice()
+    {
+        decimal overalPriceWithoutVAT = 0M;;
+
+        foreach (var item in SparePartsData)
+        {
+            overalPriceWithoutVAT += item.quantityTimesPriceWithoutVAT;
         }
 
         stringOveralPriceWithoutVAT = overalPriceWithoutVAT.ToString();
